--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
+                     <configuration>
+                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+            </configuration>
             </plugin>
         </plugins>
     </build>
